:bug: fix hero animation mobile

--- a/src/components/sections/Hero/Hero.scss
+++ b/src/components/sections/Hero/Hero.scss
@@ -1,7 +1,6 @@
 .hero {
   @media screen and (max-width: 990px) {
-    height: 100dvh;
-    margin-bottom: 54dvh;
+    height: 100vh;
   }
 
   &__content {
@@ -30,20 +29,21 @@
     left: -3px;
     @media screen and (max-width: 990px) {
       position: absolute;
-      height: 100dvh;
-      width: 100dvw;
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
     }
 
     img {
       width: 100vw;
       position: absolute;
-      @media screen and (max-width: 990px) {
-        bottom: 0;
-      }
       z-index: 2;
-
-      &:nth-child(2){
+      @media screen and (max-width: 990px) {
+        bottom: 20vh;
         z-index: 3;
+        &:nth-child(2){
+          z-index: 4;
+        }
       }
     }
 
